--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       >
       <button class="submit">OK</button>
   </div>
-  <span>Made by <a target="_blank" href="https://github.com/marcos-hein">Marcos Hein</a></span>
+  <!-- <gitspan>Made by <a target="_blank" href="https://github.com/marcos-hein">Marcos Hein</a></gitspan> -->
   <script src="./scripts.js"></script>
 </body>
 </html>
